reports/mongol/blog_1.err.log
Traceback (most recent call last):
  File "C:\Python311\Lib\site-packages\jupyter_cache\executors\utils.py", line 58, in single_nb_execution
    executenb(
  File "C:\Python311\Lib\site-packages\nbclient\client.py", line 1304, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Python311\Lib\site-packages\jupyter_core\utils\__init__.py", line 166, in wrapped
    return loop.run_until_complete(inner)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Python311\Lib\asyncio\base_events.py", line 653, in run_until_complete
    return future.result()
           ^^^^^^^^^^^^^^^
  File "C:\Python311\Lib\site-packages\nbclient\client.py", line 705, in async_execute
    await self.async_execute_cell(
  File "C:\Python311\Lib\site-packages\nbclient\client.py", line 1020, in async_execute_cell
    await self._check_raise_for_error(cell, cell_index, exec_reply)
  File "C:\Python311\Lib\site-packages\nbclient\client.py", line 914, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
```
+------------+--------------+--------------------------------+-------------------+
|name        |date_of_birth |hashed_salary                   |anonymized_address |
+------------+--------------+--------------------------------+-------------------+
|John Doe    |1980-05-10    |c4d23d97b6a6414bc8fb144abbeeeef7 |Anonymized         |
|Jane Smith  |1992-12-15    |b6c87dd984adee6ff453a94a5e36f1b1 |Anonymized         |
|Mike Johnson|1985-07-22    |a55c1e1398dd42de8d34d96c4a523f40 |Anonymized         |
+------------+--------------+--------------------------------+-------------------+
```
------------------

[1;36m  Cell [1;32mIn[1], line 5[1;36m[0m
[1;33m    |John Doe    |1980-05-10    |c4d23d97b6a6414bc8fb144abbeeeef7 |Anonymized         |[0m
[1;37m                       ^[0m
[1;31mSyntaxError[0m[1;31m:[0m leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers

SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers (4083920247.py, line 5)

